[package]
name = "rust_portfolio_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1.52.3", features = ["full"] }       # async runtime + fs + macros
serde       = { version = "1.0.228", features = ["derive"] }    # auto Serialize / Deserialize
serde_json  = "1.0.149"                                         # JSON support on top of serde
csv         = "1.4.0"                                           # CSV reader/writer
anyhow      = "1.0.102"                                         # ergonomic Result<T, anyhow::Error>